client/src/pages/FindWork/FindWork.scss
.find-talent-container {
  padding-top: 90px;
  padding-left: 40px;
  padding-right: 40px;

  .categories-container {
    h1 {
      margin-bottom: 30px;
    }

    .categories-slider {
      display: flex;
      flex-wrap: wrap;
      margin-bottom: 40px;
      justify-content: space-between;

      .swiper-slide {
        text-align: center;
        font-size: 18px;
        background: #fff;
        position: relative;
        width: 280px;
        height: 200px;
        margin-right: 20px;
        margin-bottom: 30px;
        cursor: pointer;

        /* Center slide text vertically */
        display: flex;
        justify-content: center;
        align-items: center;

        img {
          display: block;
          width: 280px;
          height: 200px;
          object-fit: cover;
          border-radius: var(--border-radius-big);
        }

        &::before {
          content: "";
          position: absolute;
          width: 100%;
          height: 100%;
          border-radius: var(--border-radius-big);
          left: 0;
          top: 0;
          background: black;
          opacity: 0.5;
        }

        .category-name {
          position: absolute;
          color: white;
          font-weight: 600;
        }
      }
    }
  }

  .post-request {
    h1 {
      margin-top: 20px;
      text-align: center;
    }

    .btn {
      margin-left: auto;
      margin-right: auto;
      margin-top: 20px;
      background: linear-gradient(90deg, #755bea, #ff72c0);
      width: max-content;
      padding: 10px 30px;
      font-size: 20px;
      border-radius: var(--border-radius-big);
      color: white;
      cursor: pointer;

      a {
        &:hover {
          color: white;
        }
      }

      &:hover {
        background: linear-gradient(90deg, #634fbb, #d863a3);
      }
    }
  }
}

